--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -5,7 +5,8 @@
   "pathFolders": [
     "Auto RP Paths",
     "Leave Auto Paths",
-    "Multi Coral"
+    "Multi Coral",
+    "Tuning"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
@@ -15,12 +16,12 @@
   "defaultNominalVoltage": 12.0,
   "robotMass": 74.088,
   "robotMOI": 6.883,
-  "robotTrackwidth": 0.82,
-  "driveWheelRadius": 0.048,
+  "robotTrackwidth": 0.6731,
+  "driveWheelRadius": 0.075,
   "driveGearing": 5.143,
-  "maxDriveSpeed": 5.45,
+  "maxDriveSpeed": 11.0,
   "driveMotorType": "NEO",
-  "driveCurrentLimit": 60.0,
+  "driveCurrentLimit": 40.0,
   "wheelCOF": 1.2,
   "flModuleX": 0.273,
   "flModuleY": 0.273,
